dataset1235/2025-2/2318198438/users/1324664027/executions/1897677159_1462915504.log
== SUBMISSION (2025-08-18 20:46:27)
-- CODE: 
from math import pi, tan

# faça seu código aqui!

l = float(input("Lado: "))

ap = l/(2*tan(pi/5))
A = (5/2)*l*ap

print(round((A), 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Lado: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Lado: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Lado: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Lado: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Lado: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Lado: 172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 20:43:29)
-- CODE: 
from math import pi, tan

# faça seu código aqui!

l = float(input("Lado: "))

ap = l/(2*tan(pi/5))
print(ap)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Lado: 6.193718642120282
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Lado: 4.129145761413521
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Lado: 7.570100562591455
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Lado: 5.505527681884695
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Lado: 2.7527638409423476
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Lado: 6.881909602355869
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 20:43:18)
-- CODE: 
from math import pi

# faça seu código aqui!

l = float(input("Lado: "))

ap = l/(2*tan(pi/5))
print(ap)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ap = l/(2*tan(pi/5))
              ^^^
NameError: name 'tan' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ap = l/(2*tan(pi/5))
              ^^^
NameError: name 'tan' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ap = l/(2*tan(pi/5))
              ^^^
NameError: name 'tan' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ap = l/(2*tan(pi/5))
              ^^^
NameError: name 'tan' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ap = l/(2*tan(pi/5))
              ^^^
NameError: name 'tan' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    ap = l/(2*tan(pi/5))
              ^^^
NameError: name 'tan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
